<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="authenitcation.loginFragment"
    android:background="@color/white">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="25dp" />

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/hello"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/welcome_back"
        android:layout_marginTop="8dp"
        android:textSize="23sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/helloText"
        app:layout_constraintStart_toStartOf="@id/guideStart" />
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/email"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="@id/guideStart" />
    <EditText
        android:id="@+id/EmailET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="email"
        android:ems="30"
        android:background="@drawable/edittext"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/enter_password"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/EmailET"
        app:layout_constraintStart_toStartOf="@id/guideStart" />
    <EditText
        android:id="@+id/passwordET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        android:autofillHints="password"
        android:ems="30"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />
    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        android:text="@string/forget_password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:paddingEnd="120dp"
        android:paddingStart="120dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        android:backgroundTint="@color/green"
        android:drawableEnd="@drawable/arrow"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/OrSignInWith"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        android:text="@string/or_sign_in_with"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/googleButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableEnd="@drawable/google"
        android:text="@string/google"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/facebookButton"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/OrSignInWith"/>

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/facebook"
        android:layout_marginTop="10dp"
        android:paddingStart="8dp"
        android:text="@string/facebook"
        android:paddingEnd="8dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/googleButton"
        app:layout_constraintTop_toBottomOf="@+id/OrSignInWith"
        android:gravity="center"/>

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toStartOf="@id/signUpText"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/facebookButton"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/sing_up"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/dontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/facebookButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
